tests/good/typing/050-if-alone.clap
** unit
val x = if False then U
