tests/bad/lexical/077-if-if-then-then.clap
val x =
    if if 42 then then 17
